Fix - sphere animation on mobile

--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -53,3 +53,23 @@
   margin-top: 0px;
   transform: rotateY(-45deg) rotateX(45deg) translateY(0);
 }
+
+@media only screen and (max-width: 1024px) {
+  .cube {
+    animation: rotate 5s linear infinite;
+  }
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotateX(-1deg) rotateY(-1deg) rotateZ(-1deg);
+  }
+
+  50% {
+    transform: rotateX(180deg) rotateY(180deg) rotateZ(180deg);
+  }
+
+  100% {
+    transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg);
+  }
+}
